<resources>
    <string name="app_name">MultiplesKickChecker</string>
    <string name="twins">Twins</string>
    <string name="triplets">Triplets</string>
    <string name="quadruplets">Quadruplets</string>
    <string name="title">Multiples Kick Checker</string>
    <string name="time">Time</string>
    <string name="start">START</string>
    <string name="first">First</string>
    <string name="second">Second</string>
    <string name="third">Third</string>
    <string name="fourth">Fourth</string>
    <string name="description_title">Multiples Kick Checker Description</string>
    <string name="description_1">1. Self-check the number of strokes once a day.</string>
    <string name="description_2">2. Record the time taken until the number of strokes reaches 10.</string>
    <string name="description_3">3. Press the Start button to display the start time of the start inspection.</string>
    <string name="description_4">4. Whenever you feel a movement, press the + button.(If incorrectly checked - press button to correct.)</string>
    <string name="description_5">5. Time and elapsed time are displayed when the total number of strokes is 10.</string>
    <string name="description_6">6. The total number of strokes can be changed in the upper right menu bar>set of the check screen.</string>
    <string name="back_button">Press the \'Back\' button one more time and it will end.</string>
    <string name="alert">Warning!</string>
    <string name="alert_message">Are you sure you want to start or reset?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="cancel">CANCEL</string>
    <string name="start_message">Start the Kick Check.</string>
    <string name="reset_cancel">Reset cancelled.</string>
    <string name="start_button_press">Please press the start button first.</string>
    <string name="termination">Termination</string>
    <string name="description_menu">INSTRUCTION</string>
    <string name="setting">SETTING</string>
    <string name="strat_time">Start Time</string>
    <string name="sortation">Sortation</string>
    <string name="count">Count</string>
    <string name="add">ADD</string>
    <string name="sub">SUB</string>
    <string name="end_time">End Time</string>
    <string name="duration">Duration</string>
    <string name="twin_title">Twins Kick Checker</string>
    <string name="triplets_title">Triplets Kick Checker</string>
    <string name="quadruplets_title">Quadruplets Kick Checker</string>
    <string name="max_movement_value">Maximum Kick Count Setting</string>
    <string name="history">HISTORY</string>
    <string name="date">DATE</string>
    <string name="count_first">FirstBorn</string>
    <string name="count_second">SecondBorn</string>
    <string name="count_third">ThirdBorn</string>
    <string name="count_fourth">FourthBorn</string>
    <string name="duration_first">Duration_1</string>
    <string name="duration_second">Duration_2</string>
    <string name="duration_third">Duration_3</string>
    <string name="duration_fourth">Duration_4</string>
    <string name="delete">DELETE</string>
    <string name="delete_message">Deleted Successfully.</string>
    <string name="no_data">No Data To Show</string>
    <string name="db_save">DataBase Save</string>
    <string name="db_save_message">Do you want to save the data?</string>
    <string name="install">INSTALL</string>
    <string name="installed">An update has just been downloaded.</string>
</resources>