<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/white"
    android:orientation="vertical"
    tools:context=".TripletsActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:autoSizeTextType="uniform"
        android:background="@drawable/edge"
        android:foregroundGravity="center"
        android:gravity="center_horizontal"
        android:text="@string/twin_title"
        android:textColor="@color/black"
        android:textSize="50dp" />

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/start_Time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/edge"
            android:backgroundTint="@color/white"
            android:gravity="center_horizontal"
            android:hint="@string/strat_time"
            android:textColor="@color/black"
            android:textSize="30dp" />

        <Button
            android:id="@+id/start_Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autoSizeTextType="uniform"
            android:background="@color/white"
            android:backgroundTint="@color/teal_200"
            android:gravity="center_horizontal"
            android:text="@string/start"
            android:textSize="50dp" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:autoSizeTextType="uniform"
            android:background="@drawable/edge"
            android:gravity="center_horizontal|center_vertical"
            android:padding="10dp"
            android:text="@string/first"
            android:textColor="@color/black"
            android:textSize="30dp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:autoSizeTextType="uniform"
            android:background="@drawable/edge"
            android:gravity="center_horizontal|center_vertical"
            android:padding="10dp"
            android:text="@string/second"
            android:textColor="@color/black"
            android:textSize="30dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/number1_count"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/edge"
            android:hint="@string/count"
            android:gravity="center_horizontal|center_vertical"
            android:textColor="@color/black"
            android:textSize="50dp" />

        <TextView
            android:id="@+id/number2_count"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="@string/count"
            android:background="@drawable/edge"
            android:gravity="center_horizontal|center_vertical"
            android:textColor="@color/black"
            android:textSize="50dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/number1_add"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:autoSizeTextType="uniform"
            android:backgroundTint="@color/teal_200"
            android:text="+"
            android:textSize="50dp" />

        <Button
            android:id="@+id/number2_add"
            android:layout_width="0dp"
            android:autoSizeTextType="uniform"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/teal_200"
            android:text="+"
            android:textSize="50dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/number1_sub"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:autoSizeTextType="uniform"
            android:backgroundTint="@color/teal_200"
            android:text="-"
            android:textSize="50dp" />

        <Button
            android:id="@+id/number2_sub"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:autoSizeTextType="uniform"
            android:backgroundTint="@color/teal_200"
            android:text="-"
            android:textSize="50dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/finish_time1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/edge"
            android:hint="@string/end_time"
            android:gravity="center_horizontal|center_vertical"
            android:textColor="@color/black"
            android:textSize="30dp" />

        <TextView
            android:id="@+id/finish_time2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="@string/end_time"
            android:background="@drawable/edge"
            android:gravity="center_horizontal|center_vertical"
            android:textColor="@color/black"
            android:textSize="30dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/time_diff1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="@string/duration"
            android:background="@drawable/edge"
            android:gravity="center_horizontal|center_vertical"
            android:textColor="@color/black"
            android:textSize="30dp" />

        <TextView
            android:id="@+id/time_diff2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="@string/duration"
            android:background="@drawable/edge"
            android:gravity="center_horizontal|center_vertical"
            android:textColor="@color/black"
            android:textSize="30dp" />

    </LinearLayout>

    <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_weight="1"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-9708062265777742/4628892374"></com.google.android.gms.ads.AdView>

</LinearLayout>